# socialbot

./: .gitignore  .mcp.json  README.md  central-america-founders-retreat-itinerary.md  central-america-founders-retreat.html  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: ig-researcher.md
skills/ig-researcher/: SKILL.md
src/ig_researcher/: __init__.py  __main__.py  config.py  keychain.py  logging_utils.py  mcp_server.py
src/ig_researcher/agent/: __init__.py
src/ig_researcher/agent/tools/: __init__.py  analyze.py  fetch.py  search.py
src/ig_researcher/browser/: __init__.py  actions.py  client.py  context.py  humanize.py  rate_limiter.py  session.py
src/ig_researcher/storage/: __init__.py  session_store.py
